// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serial serial/css/css-modules-no-space exported tests should allow to create css modules: cssContent 1`] = `
/*!**************************!*\\
  !*** ./style.module.css ***!
  \\**************************/
._style_module_css-no-space {
	.class {
		color: red;
	}

	.class {
		color: red;
	}

	._style_module_css-class {
		color: red;
	}

	._style_module_css-class {
		color: red;
	}

	#_style_module_css-hash {
		color: red;
	}

	{
		color: red;
	}
}
`;

exports[`serial serial/css/css-modules-no-space exported tests should allow to create css modules: x 1`] = `
Object {
  class: _style_module_css-class,
}
`;

exports[`serial serial/css/escape-unescape exported tests should work with URLs in CSS: classes 1`] = `
Object {
  #: _style_modules_css-#,
  ##: _style_modules_css-##,
  #.#.#: _style_modules_css-#.#.#,
  #fake-id: _style_modules_css-#fake-id,
  ++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.: _style_modules_css-++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.,
  -a-b-c-: _style_modules_css--a-b-c-,
  -a0-34a___f: _style_modules_css--a0-34a___f,
  .: _style_modules_css-.,
  123: _style_modules_css-123,
  1a2b3c: _style_modules_css-1a2b3c,
  :): _style_modules_css-:),
  :\`(: _style_modules_css-:\`(,
  :hover: _style_modules_css-:hover,
  :hover:focus:active: _style_modules_css-:hover:focus:active,
  <><<<>><>: _style_modules_css-<><<<>><>,
  <p>: _style_modules_css-<p>,
  ?: _style_modules_css-?,
  @: _style_modules_css-@,
  B&W?: _style_modules_css-B&W?,
  [attr=value]: _style_modules_css-[attr=value],
  _: _style_modules_css-_,
  _test: _style_modules_css-_test,
  class: _style_modules_css-class,
  className: _style_modules_css-className,
  f!o!o: _style_modules_css-f!o!o,
  f'o'o: _style_modules_css-f'o'o,
  f*o*o: _style_modules_css-f*o*o,
  f+o+o: _style_modules_css-f+o+o,
  f/o/o: _style_modules_css-f/o/o,
  f@oo: _style_modules_css-f@oo,
  f\\o\\o: _style_modules_css-f\\o\\o,
  foo.bar: _style_modules_css-foo.bar,
  foo/bar: _style_modules_css-foo/bar,
  foo/bar/baz: _style_modules_css-foo/bar/baz,
  foo\\bar: _style_modules_css-foo\\bar,
  foo\\bar\\baz: _style_modules_css-foo\\bar\\baz,
  f~o~o: _style_modules_css-f~o~o,
  m_x_@: _style_modules_css-m_x_@,
  someId: _style_modules_css-someId,
  subClass: _style_modules_css-subClass,
  test: _style_modules_css-test,
  {}: _style_modules_css-{},
  ©: _style_modules_css-©,
  “‘’”: _style_modules_css-“‘’”,
  ⌘⌥: _style_modules_css-⌘⌥,
  ☺☃: _style_modules_css-☺☃,
  ♥: _style_modules_css-♥,
  𝄞♪♩♫♬: _style_modules_css-𝄞♪♩♫♬,
  💩: _style_modules_css-💩,
  😍: _style_modules_css-😍,
}
`;

exports[`serial serial/css/escape-unescape exported tests should work with URLs in CSS: classes 2`] = `
Object {
  #: _style_modules_css-#,
  ##: _style_modules_css-##,
  #.#.#: _style_modules_css-#.#.#,
  #fake-id: _style_modules_css-#fake-id,
  ++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.: _style_modules_css-++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.,
  -a-b-c-: _style_modules_css--a-b-c-,
  -a0-34a___f: _style_modules_css--a0-34a___f,
  .: _style_modules_css-.,
  123: _style_modules_css-123,
  1a2b3c: _style_modules_css-1a2b3c,
  :): _style_modules_css-:),
  :\`(: _style_modules_css-:\`(,
  :hover: _style_modules_css-:hover,
  :hover:focus:active: _style_modules_css-:hover:focus:active,
  <><<<>><>: _style_modules_css-<><<<>><>,
  <p>: _style_modules_css-<p>,
  ?: _style_modules_css-?,
  @: _style_modules_css-@,
  B&W?: _style_modules_css-B&W?,
  [attr=value]: _style_modules_css-[attr=value],
  _: _style_modules_css-_,
  _test: _style_modules_css-_test,
  class: _style_modules_css-class,
  className: _style_modules_css-className,
  f!o!o: _style_modules_css-f!o!o,
  f'o'o: _style_modules_css-f'o'o,
  f*o*o: _style_modules_css-f*o*o,
  f+o+o: _style_modules_css-f+o+o,
  f/o/o: _style_modules_css-f/o/o,
  f@oo: _style_modules_css-f@oo,
  f\\o\\o: _style_modules_css-f\\o\\o,
  foo.bar: _style_modules_css-foo.bar,
  foo/bar: _style_modules_css-foo/bar,
  foo/bar/baz: _style_modules_css-foo/bar/baz,
  foo\\bar: _style_modules_css-foo\\bar,
  foo\\bar\\baz: _style_modules_css-foo\\bar\\baz,
  f~o~o: _style_modules_css-f~o~o,
  m_x_@: _style_modules_css-m_x_@,
  someId: _style_modules_css-someId,
  subClass: _style_modules_css-subClass,
  test: _style_modules_css-test,
  {}: _style_modules_css-{},
  ©: _style_modules_css-©,
  “‘’”: _style_modules_css-“‘’”,
  ⌘⌥: _style_modules_css-⌘⌥,
  ☺☃: _style_modules_css-☺☃,
  ♥: _style_modules_css-♥,
  𝄞♪♩♫♬: _style_modules_css-𝄞♪♩♫♬,
  💩: _style_modules_css-💩,
  😍: _style_modules_css-😍,
}
`;

exports[`serial serial/css/escape-unescape exported tests should work with URLs in CSS: css 1`] = `
Array [
  /*!***************************!*\\
  !*** ./style.modules.css ***!
  \\***************************/
._style_modules_css-class {
	color: red;
}

._style_modules_css-class {
	background: blue;
}

._style_modules_css-test {
	background: red;
}

._style_modules_css-_test {
	background: blue;
}

._style_modules_css-className {
	background: red;
}

#_style_modules_css-someId {
	background: green;
}

._style_modules_css-className ._style_modules_css-subClass {
	color: green;
}

#_style_modules_css-someId ._style_modules_css-subClass {
	color: blue;
}

._style_modules_css--a0-34a___f {
	color: red;
}

._style_modules_css-m_x_\\@ {
	margin-left: auto !important;
	margin-right: auto !important;
}

._style_modules_css-B\\&W\\? {
	margin-left: auto !important;
	margin-right: auto !important;
}

/* matches elements with class=":\`(" */
._style_modules_css-\\:\\\`\\( {
	color: aqua;
}

/* matches elements with class="1a2b3c" */
._style_modules_css-1a2b3c {
	color: aliceblue;
}

/* matches the element with id="#fake-id" */
#_style_modules_css-\\#fake-id {
	color: antiquewhite;
}

/* matches the element with id="-a-b-c-" */
#_style_modules_css--a-b-c- {
	color: azure;
}

/* matches the element with id="©" */
#_style_modules_css-© {
	color: black;
}

._style_modules_css-♥ { background: lime; }
._style_modules_css-© { background: lime; }
._style_modules_css-\\😍 { background: lime; }
._style_modules_css-“‘’” { background: lime; }
._style_modules_css-☺☃ { background: lime; }
._style_modules_css-⌘⌥ { background: lime; }
._style_modules_css-\\𝄞♪♩♫♬ { background: lime; }
._style_modules_css-\\💩 { background: lime; }
._style_modules_css-\\? { background: lime; }
._style_modules_css-\\@ { background: lime; }
._style_modules_css-\\. { background: lime; }
._style_modules_css-\\:\\) { background: lime; }
._style_modules_css-\\:\\\`\\( { background: lime; }
._style_modules_css-123 { background: lime; }
._style_modules_css-1a2b3c { background: lime; }
._style_modules_css-\\<p\\> { background: lime; }
._style_modules_css-\\<\\>\\<\\<\\<\\>\\>\\<\\> { background: lime; }
._style_modules_css-\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\[\\>\\+\\+\\+\\+\\+\\+\\+\\>\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\>\\+\\+\\+\\>\\+\\<\\<\\<\\<-\\]\\>\\+\\+\\.\\>\\+\\.\\+\\+\\+\\+\\+\\+\\+\\.\\.\\+\\+\\+\\.\\>\\+\\+\\.\\<\\<\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\.\\>\\.\\+\\+\\+\\.------\\.--------\\.\\>\\+\\.\\>\\. { background: lime; }
._style_modules_css-\\# { background: lime; }
._style_modules_css-\\#\\# { background: lime; }
._style_modules_css-\\#\\.\\#\\.\\# { background: lime; }
._style_modules_css-_ { background: lime; }
._style_modules_css-\\{\\} { background: lime; }
._style_modules_css-\\#fake-id { background: lime; }
._style_modules_css-foo\\.bar { background: lime; }
._style_modules_css-\\:hover { background: lime; }
._style_modules_css-\\:hover\\:focus\\:active { background: lime; }
._style_modules_css-\\[attr\\=value\\] { background: lime; }
._style_modules_css-f\\/o\\/o { background: lime; }
._style_modules_css-f\\\\o\\\\o { background: lime; }
._style_modules_css-f\\*o\\*o { background: lime; }
._style_modules_css-f\\!o\\!o { background: lime; }
._style_modules_css-f\\'o\\'o { background: lime; }
._style_modules_css-f\\~o\\~o { background: lime; }
._style_modules_css-f\\+o\\+o { background: lime; }

._style_modules_css-foo\\/bar {
	background: hotpink;
}

._style_modules_css-foo\\\\bar {
	background: hotpink;
}

._style_modules_css-foo\\/bar\\/baz {
	background: hotpink;
}

._style_modules_css-foo\\\\bar\\\\baz {
	background: hotpink;
}

:root {
	--main-bg-color: red;
	--main-bg-color-\\@2: blue;
}

details {
	background-color: var(--main-bg-color);
	background-color: var(--main-bg-color-\\@2);
}

@keyframes _style_modules_css-f\\@oo { from { color: red; } to { color: blue; } },
]
`;

exports[`serial serial/css/escape-unescape exported tests should work with URLs in CSS: css 2`] = `
Array [
  /*!***************************!*\\
  !*** ./style.modules.css ***!
  \\***************************/
._style_modules_css-class {
	color: red;
}

._style_modules_css-class {
	background: blue;
}

._style_modules_css-test {
	background: red;
}

._style_modules_css-_test {
	background: blue;
}

._style_modules_css-className {
	background: red;
}

#_style_modules_css-someId {
	background: green;
}

._style_modules_css-className ._style_modules_css-subClass {
	color: green;
}

#_style_modules_css-someId ._style_modules_css-subClass {
	color: blue;
}

._style_modules_css--a0-34a___f {
	color: red;
}

._style_modules_css-m_x_\\@ {
	margin-left: auto !important;
	margin-right: auto !important;
}

._style_modules_css-B\\&W\\? {
	margin-left: auto !important;
	margin-right: auto !important;
}

/* matches elements with class=":\`(" */
._style_modules_css-\\:\\\`\\( {
	color: aqua;
}

/* matches elements with class="1a2b3c" */
._style_modules_css-1a2b3c {
	color: aliceblue;
}

/* matches the element with id="#fake-id" */
#_style_modules_css-\\#fake-id {
	color: antiquewhite;
}

/* matches the element with id="-a-b-c-" */
#_style_modules_css--a-b-c- {
	color: azure;
}

/* matches the element with id="©" */
#_style_modules_css-© {
	color: black;
}

._style_modules_css-♥ { background: lime; }
._style_modules_css-© { background: lime; }
._style_modules_css-\\😍 { background: lime; }
._style_modules_css-“‘’” { background: lime; }
._style_modules_css-☺☃ { background: lime; }
._style_modules_css-⌘⌥ { background: lime; }
._style_modules_css-\\𝄞♪♩♫♬ { background: lime; }
._style_modules_css-\\💩 { background: lime; }
._style_modules_css-\\? { background: lime; }
._style_modules_css-\\@ { background: lime; }
._style_modules_css-\\. { background: lime; }
._style_modules_css-\\:\\) { background: lime; }
._style_modules_css-\\:\\\`\\( { background: lime; }
._style_modules_css-123 { background: lime; }
._style_modules_css-1a2b3c { background: lime; }
._style_modules_css-\\<p\\> { background: lime; }
._style_modules_css-\\<\\>\\<\\<\\<\\>\\>\\<\\> { background: lime; }
._style_modules_css-\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\[\\>\\+\\+\\+\\+\\+\\+\\+\\>\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\>\\+\\+\\+\\>\\+\\<\\<\\<\\<-\\]\\>\\+\\+\\.\\>\\+\\.\\+\\+\\+\\+\\+\\+\\+\\.\\.\\+\\+\\+\\.\\>\\+\\+\\.\\<\\<\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\+\\.\\>\\.\\+\\+\\+\\.------\\.--------\\.\\>\\+\\.\\>\\. { background: lime; }
._style_modules_css-\\# { background: lime; }
._style_modules_css-\\#\\# { background: lime; }
._style_modules_css-\\#\\.\\#\\.\\# { background: lime; }
._style_modules_css-_ { background: lime; }
._style_modules_css-\\{\\} { background: lime; }
._style_modules_css-\\#fake-id { background: lime; }
._style_modules_css-foo\\.bar { background: lime; }
._style_modules_css-\\:hover { background: lime; }
._style_modules_css-\\:hover\\:focus\\:active { background: lime; }
._style_modules_css-\\[attr\\=value\\] { background: lime; }
._style_modules_css-f\\/o\\/o { background: lime; }
._style_modules_css-f\\\\o\\\\o { background: lime; }
._style_modules_css-f\\*o\\*o { background: lime; }
._style_modules_css-f\\!o\\!o { background: lime; }
._style_modules_css-f\\'o\\'o { background: lime; }
._style_modules_css-f\\~o\\~o { background: lime; }
._style_modules_css-f\\+o\\+o { background: lime; }

._style_modules_css-foo\\/bar {
	background: hotpink;
}

._style_modules_css-foo\\\\bar {
	background: hotpink;
}

._style_modules_css-foo\\/bar\\/baz {
	background: hotpink;
}

._style_modules_css-foo\\\\bar\\\\baz {
	background: hotpink;
}

:root {
	--main-bg-color: red;
	--main-bg-color-\\@2: blue;
}

details {
	background-color: var(--main-bg-color);
	background-color: var(--main-bg-color-\\@2);
}

@keyframes _style_modules_css-f\\@oo { from { color: red; } to { color: blue; } },
]
`;

exports[`serial serial/css/large exported tests should allow to create css modules: 0_dev 1`] = `
Object {
  placeholder: my-app-_tailwind_module_css-placeholder-gray-700,
}
`;

exports[`serial serial/css/large exported tests should allow to create css modules: 1_prod 1`] = `
Object {
  placeholder: _6d72b53b84605386-placeholder-gray-700,
}
`;

exports[`serial serial/css/no-extra-runtime-in-js exported tests should compile 1`] = `
Array [
  /*!*******************!*\\
  !*** ./style.css ***!
  \\*******************/
.class {
	color: red;
	background:
		url(img.png),
		url(img.png),
		url(9aaba41ffa2da101.png);
		url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABAQMAAAAl21bKAAAAA1BMVEUAAACnej3aAAAAAXRSTlMAQObYZgAAAApJREFUCNdjYAAAAAIAAeIhvDMAAAAASUVORK5CYII=),
		url(resource.png),
		url('./source.text'),
		url(fae013ca3772b2c5.htm),
		url(https://example.com/img.png);
}

.class-2 {
	background: url(shared.png);
}

.class-3 {
	background: url(shared-external.png);
}

.class-4 {
	background: url(4e418f0d69cf49fa.gif);
}

.class-5 {
	background: url(1237b02e54ad8fd3.png);
},
  /*!*******************!*\\
  !*** ./style.css ***!
  \\*******************/
.class {
	color: red;
	background:
		url(img.png),
		url(img.png),
		url(9aaba41ffa2da101.png);
		url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABAQMAAAAl21bKAAAAA1BMVEUAAACnej3aAAAAAXRSTlMAQObYZgAAAApJREFUCNdjYAAAAAIAAeIhvDMAAAAASUVORK5CYII=),
		url(resource.png),
		url('./source.text'),
		url(fae013ca3772b2c5.htm),
		url(https://example.com/img.png);
}

.class-2 {
	background: url(shared.png);
}

.class-3 {
	background: url(shared-external.png);
}

.class-4 {
	background: url(4e418f0d69cf49fa.gif);
}

.class-5 {
	background: url(1237b02e54ad8fd3.png);
},
]
`;

exports[`serial serial/css/pseudo-import exported tests should compile 1`] = `
Array [
  /*!***************************!*\\
  !*** ./style.modules.css ***!
  \\***************************/




._style_modules_css-class {
	color: IMPORTED_NAME;
	background: IMPORTED_NAME;
}


._style_modules_css-class {background: IMPORTED_NAME}

._style_modules_css-class {
	color: i__imported_a_0;
	color: i__imported__b_1;
	color: i__imported___c_2;
	color: i__imported__d_3;
}



._style_modules_css-class {
	color: something;
}



._style_modules_css-class {
	color: again;
}

/* TODO fix me */
/*:import("reexport.modules.css") {
	primary-color: _my_color;
}

.class {color: primary-color}*/



._style_modules_css-class {
	color:    _i_multile_values   ;
}

._style_modules_css-nest {
	

	:export {
		unknown: unknown;
	}

	unknown: unknown;
},
  /*!***************************!*\\
  !*** ./style.modules.css ***!
  \\***************************/




._style_modules_css-class {
	color: IMPORTED_NAME;
	background: IMPORTED_NAME;
}


._style_modules_css-class {background: IMPORTED_NAME}

._style_modules_css-class {
	color: i__imported_a_0;
	color: i__imported__b_1;
	color: i__imported___c_2;
	color: i__imported__d_3;
}



._style_modules_css-class {
	color: something;
}



._style_modules_css-class {
	color: again;
}

/* TODO fix me */
/*:import("reexport.modules.css") {
	primary-color: _my_color;
}

.class {color: primary-color}*/



._style_modules_css-class {
	color:    _i_multile_values   ;
}

._style_modules_css-nest {
	

	:export {
		unknown: unknown;
	}

	unknown: unknown;
},
  /*!***************************!*\\
  !*** ./style.modules.css ***!
  \\***************************/




._style_modules_css-class {
	color: IMPORTED_NAME;
	background: IMPORTED_NAME;
}


._style_modules_css-class {background: IMPORTED_NAME}

._style_modules_css-class {
	color: i__imported_a_0;
	color: i__imported__b_1;
	color: i__imported___c_2;
	color: i__imported__d_3;
}



._style_modules_css-class {
	color: something;
}



._style_modules_css-class {
	color: again;
}

/* TODO fix me */
/*:import("reexport.modules.css") {
	primary-color: _my_color;
}

.class {color: primary-color}*/



._style_modules_css-class {
	color:    _i_multile_values   ;
}

._style_modules_css-nest {
	

	:export {
		unknown: unknown;
	}

	unknown: unknown;
},
]
`;

exports[`serial serial/css/pure-css exported tests should compile 1`] = `
Array [
  /*!***************************************!*\\
  !*** ../css-modules/style.module.css ***!
  \\***************************************/
.class {
	color: red;
}

.local1,
.local2 :global .global,
.local3 {
	color: green;
}

:global .global :local .local4 {
	color: yellow;
}

.local5:global(.global).local6 {
	color: blue;
}

:global(:global(:local(.nested1)).nested2).nested3 {
	color: pink;
}

#ident {
	color: purple;
}

@keyframes localkeyframes {
	0% {
		left: var(--pos1x);
		top: var(--pos1y);
		color: var(--theme-color1);
	}
	100% {
		left: var(--pos2x);
		top: var(--pos2y);
		color: var(--theme-color2);
	}
}

@keyframes localkeyframes2 {
	0% {
		left: 0;
	}
	100% {
		left: 100px;
	}
}

.animation {
	animation-name: localkeyframes;
	animation: Xs ease-in Xs 2 reverse both paused localkeyframes, localkeyframes2;
	--pos1x: 0px;
	--pos1y: 0px;
	--pos2x: 10px;
	--pos2y: 20px;
}

/* .composed {
	composes: local1;
	composes: local2;
} */

.vars {
	color: var(--local-color);
	--local-color: red;
}

.globalVars :global {
	color: var(--global-color);
	--global-color: red;
}


/*!*******************!*\\
  !*** ./style.css ***!
  \\*******************/


.class {
	color: red;
	background: var(--color);
}

@keyframes test {
	0% {
		color: red;
	}
	100% {
		color: blue;
	}
}

:local(.class) {
	color: red;
}

:local .class {
	color: green;
}

:global(.class) {
	color: blue;
}

:global .class {
	color: white;
}

:export {
	foo: bar;
}

.class {
	animation: test Xs, test;
},
  /*!***************************************!*\\
  !*** ../css-modules/style.module.css ***!
  \\***************************************/
.class {
	color: red;
}

.local1,
.local2 :global .global,
.local3 {
	color: green;
}

:global .global :local .local4 {
	color: yellow;
}

.local5:global(.global).local6 {
	color: blue;
}

:global(:global(:local(.nested1)).nested2).nested3 {
	color: pink;
}

#ident {
	color: purple;
}

@keyframes localkeyframes {
	0% {
		left: var(--pos1x);
		top: var(--pos1y);
		color: var(--theme-color1);
	}
	100% {
		left: var(--pos2x);
		top: var(--pos2y);
		color: var(--theme-color2);
	}
}

@keyframes localkeyframes2 {
	0% {
		left: 0;
	}
	100% {
		left: 100px;
	}
}

.animation {
	animation-name: localkeyframes;
	animation: Xs ease-in Xs 2 reverse both paused localkeyframes, localkeyframes2;
	--pos1x: 0px;
	--pos1y: 0px;
	--pos2x: 10px;
	--pos2y: 20px;
}

/* .composed {
	composes: local1;
	composes: local2;
} */

.vars {
	color: var(--local-color);
	--local-color: red;
}

.globalVars :global {
	color: var(--global-color);
	--global-color: red;
}


/*!*******************!*\\
  !*** ./style.css ***!
  \\*******************/


.class {
	color: red;
	background: var(--color);
}

@keyframes test {
	0% {
		color: red;
	}
	100% {
		color: blue;
	}
}

:local(.class) {
	color: red;
}

:local .class {
	color: green;
}

:global(.class) {
	color: blue;
}

:global .class {
	color: white;
}

:export {
	foo: bar;
}

.class {
	animation: test Xs, test;
},
]
`;

exports[`serial serial/css/url-and-asset-module-filename exported tests should generate correct url public path with css filename: 0_style1 1`] = `
Object {
  getPropertyValue: [Function],
  nested-dir: url(../../bundle0/assets/img2.png),
  nested-nested-dir: url(../../bundle0/assets/img3.png),
  same-dir: url(../../bundle0/assets/img1.png),
}
`;

exports[`serial serial/css/url-and-asset-module-filename exported tests should generate correct url public path with css filename: 0_style2 1`] = `
Object {
  getPropertyValue: [Function],
  nested-dir: url(../../bundle0/assets/img3.png),
  outer-dir: url(../../bundle0/assets/img1.png),
  same-dir: url(../../bundle0/assets/img2.png),
}
`;

exports[`serial serial/css/url-and-asset-module-filename exported tests should generate correct url public path with css filename: 0_style3 1`] = `
Object {
  getPropertyValue: [Function],
  outer-dir: url(../../bundle0/assets/img2.png),
  outer-outer-dir: url(../../bundle0/assets/img1.png),
  same-dir: url(../../bundle0/assets/img3.png),
}
`;

exports[`serial serial/css/url-and-asset-module-filename exported tests should generate correct url public path with css filename: 1_style1 1`] = `
Object {
  getPropertyValue: [Function],
  nested-dir: url(https://test.cases/path/bundle1/assets/img2.png),
  nested-nested-dir: url(https://test.cases/path/bundle1/assets/img3.png),
  same-dir: url(https://test.cases/path/bundle1/assets/img1.png),
}
`;

exports[`serial serial/css/url-and-asset-module-filename exported tests should generate correct url public path with css filename: 1_style2 1`] = `
Object {
  getPropertyValue: [Function],
  nested-dir: url(https://test.cases/path/bundle1/assets/img3.png),
  outer-dir: url(https://test.cases/path/bundle1/assets/img1.png),
  same-dir: url(https://test.cases/path/bundle1/assets/img2.png),
}
`;

exports[`serial serial/css/url-and-asset-module-filename exported tests should generate correct url public path with css filename: 1_style3 1`] = `
Object {
  getPropertyValue: [Function],
  outer-dir: url(https://test.cases/path/bundle1/assets/img2.png),
  outer-outer-dir: url(https://test.cases/path/bundle1/assets/img1.png),
  same-dir: url(https://test.cases/path/bundle1/assets/img3.png),
}
`;

exports[`serial serial/css/url-and-asset-module-filename exported tests should generate correct url public path with css filename: 2_style1 1`] = `
Object {
  getPropertyValue: [Function],
  nested-dir: url(https://test.cases/path/bundle2/assets/bundle2/assets/img2.png),
  nested-nested-dir: url(https://test.cases/path/bundle2/assets/bundle2/assets/img3.png),
  same-dir: url(https://test.cases/path/bundle2/assets/bundle2/assets/img1.png),
}
`;

exports[`serial serial/css/url-and-asset-module-filename exported tests should generate correct url public path with css filename: 2_style2 1`] = `
Object {
  getPropertyValue: [Function],
  nested-dir: url(https://test.cases/path/bundle2/assets/bundle2/assets/img3.png),
  outer-dir: url(https://test.cases/path/bundle2/assets/bundle2/assets/img1.png),
  same-dir: url(https://test.cases/path/bundle2/assets/bundle2/assets/img2.png),
}
`;

exports[`serial serial/css/url-and-asset-module-filename exported tests should generate correct url public path with css filename: 2_style3 1`] = `
Object {
  getPropertyValue: [Function],
  outer-dir: url(https://test.cases/path/bundle2/assets/bundle2/assets/img2.png),
  outer-outer-dir: url(https://test.cases/path/bundle2/assets/bundle2/assets/img1.png),
  same-dir: url(https://test.cases/path/bundle2/assets/bundle2/assets/img3.png),
}
`;

exports[`serial serial/custom-modules/json-custom exported tests should transform toml to json 1`] = `
Object {
  owner: Object {
    bio: GitHub Cofounder & CEO
Likes tater tots and beer.,
    dob: 1979-05-27T07<LINE_COL>.000Z,
    name: Tom Preston-Werner,
    organization: GitHub,
  },
  title: TOML Example,
}
`;
